improve: replace Math.min/Math.max with Math.clamp